# evergen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/hello/: README.md  hello.eg.py  hello.py
examples/jinja_family/: README.md  models.eg.py  models.py
examples/jinja_family/templates/: model.j2.py
src/evergen/: __init__.py  cli.py
tests/: test_cli.py
