[project]
name = "evergen"
version = "0.2.0"
description = "A tiny, generic Python codegen orchestrator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Elijas" }]
keywords = ["codegen", "code-generation", "generator", "scaffolding", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Elijas/evergen"
Repository = "https://github.com/Elijas/evergen"
Issues = "https://github.com/Elijas/evergen/issues"
Changelog = "https://github.com/Elijas/evergen/blob/main/CHANGELOG.md"

[project.scripts]
evergen = "evergen.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Explicit allowlist so untracked/scratch files in the worktree can never leak
# into the sdist (hatchling's default sdist selection walks the directory tree
# honoring .gitignore, not `git ls-files`, so untracked-but-not-ignored files
# are otherwise included).
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
# .j2.py templates are jinja-in-python-clothing (deliberate: py highlighting);
# they are not valid Python and are rendered, never imported or linted.
extend-exclude = ["*.j2.py"]
